[gd_scene load_steps=17 format=2]

[ext_resource path="res://Menu/BikeMenu/BikeUpgradeDialog.gd" type="Script" id=1]
[ext_resource path="res://Game/GUI/assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/BikeMenu/assets/no.png" type="Texture" id=3]
[ext_resource path="res://Menu/BikeMenu/assets/minus.png" type="Texture" id=4]
[ext_resource path="res://Menu/BikeMenu/assets/yes.png" type="Texture" id=5]
[ext_resource path="res://Menu/BikeMenu/assets/plus.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 2 )

[node name="BikeUpgradeDialog" type="PopupDialog"]
self_modulate = Color( 0.320071, 0.259384, 0.347656, 0.980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -606.5
margin_top = -341.0
margin_right = 606.5
margin_bottom = 341.0
size_flags_stretch_ratio = 1.67
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nine" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Nine"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -606.5
margin_right = 606.5
margin_bottom = 130.064
rect_min_size = Vector2( 0, 120 )
custom_fonts/font = SubResource( 1 )
text = "<Upgrade bike>"
align = 1
valign = 1

[node name="Grid" type="GridContainer" parent="Nine"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.5
margin_top = -200.0
margin_right = 369.5
margin_bottom = 200.0
rect_min_size = Vector2( 460, 400 )
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="Nine/Grid"]
margin_top = 32.0
margin_right = 251.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "KEY_max_power"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerValue" type="Label" parent="Nine/Grid"]
margin_left = 255.0
margin_top = 32.0
margin_right = 355.0
margin_bottom = 67.0
rect_min_size = Vector2( 100, 35 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="PowerAdded" type="Label" parent="Nine/Grid"]
margin_left = 359.0
margin_top = 27.0
margin_right = 459.0
margin_bottom = 73.0
rect_min_size = Vector2( 100, 35 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="PowerButtons" type="VBoxContainer" parent="Nine/Grid"]
margin_left = 463.0
margin_right = 803.0
margin_bottom = 100.0
rect_min_size = Vector2( 340, 100 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_power_add" type="TouchScreenButton" parent="Nine/Grid/PowerButtons"]
position = Vector2( 70, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="btn_power_del" type="TouchScreenButton" parent="Nine/Grid/PowerButtons"]
position = Vector2( 188, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 4 )

[node name="SpeedLabel" type="Label" parent="Nine/Grid"]
margin_top = 136.0
margin_right = 251.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 5 )
text = "KEY_max_speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedValue" type="Label" parent="Nine/Grid"]
margin_left = 255.0
margin_top = 136.0
margin_right = 355.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="SpeedAdded" type="Label" parent="Nine/Grid"]
margin_left = 359.0
margin_top = 131.0
margin_right = 459.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1

[node name="SpeedButtons" type="VBoxContainer" parent="Nine/Grid"]
margin_left = 463.0
margin_top = 104.0
margin_right = 803.0
margin_bottom = 204.0
rect_min_size = Vector2( 180, 100 )
alignment = 1

[node name="btn_speed_add" type="TouchScreenButton" parent="Nine/Grid/SpeedButtons"]
position = Vector2( 70, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="btn_speed_del" type="TouchScreenButton" parent="Nine/Grid/SpeedButtons"]
position = Vector2( 188, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 4 )

[node name="JumpLabel" type="Label" parent="Nine/Grid"]
margin_top = 240.0
margin_right = 251.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 8 )
text = "KEY_max_jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpValue" type="Label" parent="Nine/Grid"]
margin_left = 255.0
margin_top = 240.0
margin_right = 355.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 9 )
text = "0"
align = 1

[node name="JumpAdded" type="Label" parent="Nine/Grid"]
margin_left = 359.0
margin_top = 235.0
margin_right = 459.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1

[node name="JumpButtons" type="VBoxContainer" parent="Nine/Grid"]
margin_left = 463.0
margin_top = 208.0
margin_right = 803.0
margin_bottom = 308.0
rect_min_size = Vector2( 180, 100 )
alignment = 1

[node name="btn_jump_add" type="TouchScreenButton" parent="Nine/Grid/JumpButtons"]
position = Vector2( 70, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="btn_jump_del" type="TouchScreenButton" parent="Nine/Grid/JumpButtons"]
position = Vector2( 188, 14 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 4 )

[node name="ButtonContainer" type="HBoxContainer" parent="Nine"]
anchor_top = 0.705
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0300293
rect_min_size = Vector2( 600, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_no" type="TouchScreenButton" parent="Nine/ButtonContainer"]
position = Vector2( 24, -2 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 3 )
visibility_mode = 1

[node name="btn_yes" type="TouchScreenButton" parent="Nine/ButtonContainer"]
position = Vector2( 1012.3, 10.7136 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 5 )
visibility_mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="Nine/Grid/PowerButtons/btn_power_add" to="." method="_on_btn_power_add_pressed"]
[connection signal="released" from="Nine/Grid/PowerButtons/btn_power_add" to="." method="_on_btn_power_add_released"]
[connection signal="pressed" from="Nine/Grid/PowerButtons/btn_power_del" to="." method="_on_btn_power_del_pressed"]
[connection signal="released" from="Nine/Grid/PowerButtons/btn_power_del" to="." method="_on_btn_power_del_released"]
[connection signal="pressed" from="Nine/Grid/SpeedButtons/btn_speed_add" to="." method="_on_btn_speed_add_pressed"]
[connection signal="released" from="Nine/Grid/SpeedButtons/btn_speed_add" to="." method="_on_btn_speed_add_released"]
[connection signal="pressed" from="Nine/Grid/SpeedButtons/btn_speed_del" to="." method="_on_btn_speed_del_pressed"]
[connection signal="released" from="Nine/Grid/SpeedButtons/btn_speed_del" to="." method="_on_btn_speed_del_released"]
[connection signal="pressed" from="Nine/Grid/JumpButtons/btn_jump_add" to="." method="_on_btn_jump_add_pressed"]
[connection signal="released" from="Nine/Grid/JumpButtons/btn_jump_add" to="." method="_on_btn_jump_add_released"]
[connection signal="pressed" from="Nine/Grid/JumpButtons/btn_jump_del" to="." method="_on_btn_jump_del_pressed"]
[connection signal="released" from="Nine/Grid/JumpButtons/btn_jump_del" to="." method="_on_btn_jump_del_released"]
[connection signal="pressed" from="Nine/ButtonContainer/btn_no" to="." method="_on_btn_no_pressed"]
[connection signal="pressed" from="Nine/ButtonContainer/btn_yes" to="." method="_on_btn_yes_pressed"]
